--- a/app/src/main/res/layout/activity_other_out_store.xml
+++ b/app/src/main/res/layout/activity_other_out_store.xml
@@ -475,10 +475,6 @@
             android:orientation="horizontal"
             android:weightSum="4">
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color" />
 
             <Button
                 android:id="@+id/btn_add"
@@ -488,11 +484,7 @@
                 android:background="@drawable/btn_check"
                 android:text="添加"
                 android:textColor="@android:color/white" />
-
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color" />
+            <include layout="@layout/line_shu"/>
 
             <Button
                 android:id="@+id/btn_finishorder"
@@ -503,11 +495,7 @@
                 android:text="完单"
                 android:textColor="@android:color/white" />
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color" />
-
+            <include layout="@layout/line_shu"/>
             <Button
                 android:id="@+id/btn_backorder"
                 android:layout_width="0dp"
@@ -517,11 +505,7 @@
                 android:text="回单"
                 android:textColor="@android:color/white" />
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color" />
-
+            <include layout="@layout/line_shu"/>
             <Button
                 android:id="@+id/btn_checkorder"
                 android:layout_width="0dp"
@@ -531,10 +515,6 @@
                 android:text="查看"
                 android:textColor="@android:color/white" />
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color" />
 
         </LinearLayout>
     </RelativeLayout>
