--- a/app/src/main/res/layout/activity_test2.xml
+++ b/app/src/main/res/layout/activity_test2.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="com.fangzuo.assist.Activity.TestActivity">
 
-    <include layout="@layout/top_bar" />
+    <include layout="@layout/top_bar2" />
 
     <Button
         android:id="@+id/test_tomcat"
