--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,7 +16,8 @@
            app:cardElevation="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
-       <RelativeLayout
+       <LinearLayout
+           android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/cpb_blue"
            android:layout_height="wrap_content">
@@ -39,8 +40,10 @@
                android:scrollHorizontally="true"
 
                android:id="@+id/tv_user"
+               android:layout_gravity="center"
                android:gravity="center"
-               android:layout_width="200dp"
+               android:layout_width="0dp"
+               android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_centerInParent="true"
@@ -48,10 +51,27 @@
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
            <TextView
-               android:id="@+id/update_data"
+               android:visibility="gone"
+               android:id="@+id/tv_notic"
+               tools:text="10"
+               android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
+               android:layout_height="wrap_content" />
+           <ImageView
+               android:visibility="gone"
+               android:background="@drawable/notic"
+               android:id="@+id/iv_notic"
+               android:layout_width="25dp"
+               android:layout_gravity="center_vertical"
+               android:layout_height="25dp"
+               android:padding="15dp"
+               />
+           <TextView
+               android:id="@+id/update_data"
+               android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="更新数据"
+               android:layout_gravity="center"
                android:gravity="center"
                android:textSize="13sp"
                android:autoLink="all"
@@ -62,7 +82,7 @@
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
 
-       </RelativeLayout>
+       </LinearLayout>
        </android.support.v7.widget.CardView>
        <include
            android:id="@+id/tab_bottom"
