--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fangzuo.assist.Activity.SettingActivity">
-    <include layout="@layout/top_bar"
+    <include layout="@layout/top_bar2"
         android:id="@+id/toolbar"
         />
 
