--- a/app/src/main/res/layout/activity_setting_menu.xml
+++ b/app/src/main/res/layout/activity_setting_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <include layout="@layout/top_bar"/>
+    <include layout="@layout/top_bar2"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
