--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -30,7 +30,7 @@
                    android:layout_centerInParent="true"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
-                   android:src="@mipmap/back"
+                   android:src="@drawable/loginout"
                    />
            </RelativeLayout>
 
@@ -51,22 +51,21 @@
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
            <TextView
-               android:visibility="gone"
                android:id="@+id/tv_notic"
                tools:text="10"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
-               android:visibility="gone"
                android:background="@drawable/notic"
                android:id="@+id/iv_notic"
-               android:layout_width="25dp"
+               android:layout_width="30dp"
                android:layout_gravity="center_vertical"
-               android:layout_height="25dp"
+               android:layout_height="30dp"
                android:padding="15dp"
                />
            <TextView
+               android:visibility="gone"
                android:id="@+id/update_data"
                android:layout_width="40dp"
                android:layout_height="30dp"
