--- a/app/src/main/res/layout/activity_table3.xml
+++ b/app/src/main/res/layout/activity_table3.xml
@@ -18,7 +18,7 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@mipmap/back"
+                android:src="@mipmap/backspace"
                 android:layout_centerInParent="true" />
 
         </RelativeLayout>
