--- a/app/src/main/res/layout/activity_purchase_order.xml
+++ b/app/src/main/res/layout/activity_purchase_order.xml
@@ -62,32 +62,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
-                    <LinearLayout
+                    <com.fangzuo.assist.widget.TextAutoTime
+                        android:id="@+id/tv_date_arrive"
+                        app:Time_titile="交货日期:"
+                        app:Time_titile_size="11sp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:gravity="center_vertical"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="交货日期:"
-                            android:layout_marginRight="10dp"
-                            android:textColor="@android:color/black"
-                            android:textSize="15sp" />
-
-                        <TextView
-                            android:id="@+id/tv_date_arrive"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
+                        android:layout_height="wrap_content"/>
                     <include layout="@layout/line_heng"/>
 
                     <LinearLayout
@@ -523,33 +503,19 @@
                 android:background="@color/white"
                 android:orientation="vertical">
 
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="日期:"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <TextView
+                <com.fangzuo.assist.widget.TextAutoTime
                     android:id="@+id/tv_date"
+                    app:Time_titile="日期:"
+                    app:Time_titile_size="11sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="19sp" />
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="结算日期:"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-
-                <TextView
+                    android:layout_height="wrap_content"/>
+                <com.fangzuo.assist.widget.TextAutoTime
                     android:id="@+id/tv_date_pay"
+                    app:Time_titile="结算日期:"
+                    app:Time_titile_size="11sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="19sp" />
+                    android:layout_height="wrap_content"/>
+
 
                 <TextView
                     android:layout_width="match_parent"
