--- a/app/src/main/res/layout/activity_product_in_storage.xml
+++ b/app/src/main/res/layout/activity_product_in_storage.xml
@@ -586,21 +586,12 @@
                 android:text="是否带出默认仓库"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="15sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:text="日期:"
-                android:textColor="@android:color/black"
-                android:textSize="15sp" />
-
-            <TextView
+            <com.fangzuo.assist.widget.TextAutoTime
                 android:id="@+id/tv_date"
+                app:Time_titile="日期:"
+                app:Time_titile_size="11sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="19sp" />
-
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="match_parent"
