--- a/app/src/main/res/layout/activity_purchase_in_storage.xml
+++ b/app/src/main/res/layout/activity_purchase_in_storage.xml
@@ -595,34 +595,19 @@
                 android:id="@+id/cb_isStorage"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="15sp" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="日期:"
-                android:textColor="@android:color/black"
-                android:textSize="15sp" />
-
-            <TextView
+            <com.fangzuo.assist.widget.TextAutoTime
                 android:id="@+id/tv_date"
+                app:Time_titile="日期:"
+                app:Time_titile_size="11sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="19sp" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="付款日期:"
-                android:textColor="@android:color/black"
-                android:textSize="15sp" />
-
-            <TextView
+                android:layout_height="wrap_content"/>
+            <com.fangzuo.assist.widget.TextAutoTime
                 android:id="@+id/tv_date_pay"
+                app:Time_titile="付款日期:"
+                app:Time_titile_size="11sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="19sp" />
+                android:layout_height="wrap_content"/>
+
 
 
             <TextView
