--- a/app/src/main/res/layout/activity_sold_out.xml
+++ b/app/src/main/res/layout/activity_sold_out.xml
@@ -636,33 +636,18 @@
                     android:text="红字"
                     android:textColor="@color/red" />
             </RadioGroup>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="日期:"
-                android:textColor="@android:color/black"
-                android:textSize="15sp" />
-
-            <TextView
+            <com.fangzuo.assist.widget.TextAutoTime
                 android:id="@+id/tv_date"
+                app:Time_titile="日期:"
+                app:Time_titile_size="11sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="19sp" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="结算日期:"
-                android:textColor="@android:color/black"
-                android:textSize="15sp" />
-
-            <TextView
+                android:layout_height="wrap_content"/>
+            <com.fangzuo.assist.widget.TextAutoTime
                 android:id="@+id/tv_date_pay"
+                app:Time_titile="结算日期:"
+                app:Time_titile_size="11sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="19sp" />
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="match_parent"
