--- a/app/src/main/res/layout/view_my_unit_spinner.xml
+++ b/app/src/main/res/layout/view_my_unit_spinner.xml
@@ -14,11 +14,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Spinner
+    <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/sp"
         android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:background="@drawable/spinner_drop_down_shape"
         android:textSize="15sp"
         />
 
