--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -114,13 +114,14 @@
             android:text="注册码"
             android:textColor="#868484"
             android:textSize="23sp" />
-
-        <Spinner
+        <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/sp_pda"
             android:layout_width="200dp"
             android:layout_height="40dp"
+            android:spinnerMode="dialog"
             android:layout_above="@+id/tv_code"
             android:layout_centerHorizontal="true"
+            android:background="@drawable/spinner_pda_drop_down_shape"
             android:gravity="center_horizontal" />
         <Button
             android:id="@+id/btn_register"
