--- a/app/src/main/res/layout/pushdown_main_list.xml
+++ b/app/src/main/res/layout/pushdown_main_list.xml
@@ -1,46 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants"
-    android:layout_height="match_parent">
+    android:orientation="horizontal">
+
+    <CheckBox
+        android:id="@+id/cb_ischeck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" />
+
     <RelativeLayout
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-        <CheckBox
-            android:id="@+id/cb_ischeck"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
         <TextView
             android:id="@+id/tv_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-
-            android:text="11111111111111111111111111"
+            android:singleLine="true"
             android:textColor="@color/black"
-            android:layout_toRightOf="@id/cb_ischeck"/>
+            android:textSize="15sp"
+            tools:text="11111111111111111111111111" />
 
         <TextView
             android:id="@+id/tv_supplier"
-            android:layout_below="@id/tv_code"
-            android:textSize="15sp"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="11111111111111111111111111"
+            android:layout_below="@id/tv_code"
+            android:singleLine="true"
             android:textColor="@color/black"
-            android:layout_toRightOf="@id/cb_ischeck"/>
+            android:textSize="15sp"
+            tools:text="11111111111111111111111111" />
 
         <TextView
             android:id="@+id/tv_date"
-            android:layout_below="@id/tv_supplier"
-            android:textSize="15sp"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="11111111111111111111111111"
+            android:layout_below="@id/tv_supplier"
+            android:singleLine="true"
             android:textColor="@color/black"
-            android:layout_toRightOf="@id/cb_ischeck"/>
+            android:textSize="15sp"
+            tools:text="11111111111111111111111111" />
     </RelativeLayout>
-</RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="1"
+        android:textColor="@color/red_point"
+        android:textSize="15sp"
+        tools:text="已下载" />
+</LinearLayout>
